--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=personal-book-project
+
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3309/book_project
+spring.datasource.username=jinseo
+spring.datasource.password=wlstj0530
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+
+spring.thymeleaf.cache=false
+
+logging.level.org.springframework.security.web=trace
+logging.level.com.crow=debug
