책검색 알라딘 api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.thymeleaf.cache=false
 
 logging.level.org.springframework.security.web=trace
 logging.level.com.crow=debug
+
+aladin.ttbkey=ttbkjk03852103001
+aladin.base-url=http://www.aladin.co.kr/ttb/api/ItemSearch.aspx
+aladin.url.http=//www.aladin.co.kr/ttb/api/ItemLookUp.aspx?ttbkey=ttbkjk03852103001&itemIdType=ISBN13&ItemId={isbn}&output=js&Version=20131101
