베스트셀러

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,5 @@ logging.level.com.crow=debug
 aladin.ttbkey=ttbkjk03852103001
 aladin.base-url=http://www.aladin.co.kr/ttb/api/ItemSearch.aspx
 aladin.item-url=http://www.aladin.co.kr/ttb/api/ItemLookUp.aspx
-aladin.url.http=//www.aladin.co.kr/ttb/api/ItemLookUp.aspx?ttbkey=ttbkjk03852103001&itemIdType=ISBN13&ItemId={isbn}&output=js&Version=20131101
+aladin.list-url=https://www.aladin.co.kr/ttb/api/ItemList.aspx
+aladin.url.http=//www.aladin.co.kr/ttb/api/ItemLookUp.aspx?ttbkey=ttbkjk03852103001&itemIdType=ISBN&ItemId={isbn}&output=js&Version=20131101
